--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="bracelet">
             <h1 class="blanc  bold">Rappel produit de sécurité</h1>
-            <a href="https://www2.hm.com/fr_fr/service-clients/product-and-quality/recalled-items.html" class="lien fonttitle bouttonBN"">Lire la suite</a>
+            <a href="https://www2.hm.com/fr_fr/service-clients/product-and-quality/recalled-items.html" class="lien fonttitle bouttonBN">Lire la suite</a>
         </div>
     </div>
     <div class="magazine">
@@ -304,6 +304,10 @@
                         <a href="#" class="fontminmini lien noir m-2">Lire la suite -></a>
 
                     </div>
+                </div>
+                <div class="réseaux">
+                    <a href=""><img src="réseaux/fb.png" class="logoReseaux" alt=""></a>
+                    <a href=""><img src="réseaux/twitter.png" alt=""></a>
                 </div>
             </div>
         </div>
