--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="elt"><img src="projethm/H&M-Logo.svg.png" class="logohm" width="50px" height="35px"></div>
+    <div class="elt"><img src="projethm/H&M-Logo.svg.png" class="logohm" ></div>
     <div class="mainbar">
         <div class="searchvide"></div>
         <div class="mainBarChoice">
@@ -221,7 +221,7 @@
     <div class="magazine">
         <div class=" center">
             <h1 class="font-xxl maj">magazine</h1>
-            <span class="maj  fonttitle">a world of inspiration</span>
+            <span class="maj  fontminmini ">a world of inspiration</span>
             <a href="https://www2.hm.com/fr_fr/life.html" class="maj m-2 noir">read h&m magazine</a>
         </div>
         <div class="magazinePHotos" >
@@ -305,10 +305,17 @@
 
                     </div>
                 </div>
+
                 <div class="réseaux">
-                    <a href=""><img src="réseaux/fb.png" class="logoReseaux" alt=""></a>
-                    <a href=""><img src="réseaux/twitter.png" alt=""></a>
+                    <a href="https://www.facebook.com/hm"><img src="réseaux/fb.png" class="logoReseaux" alt=""></a>
+                    <a href="https://www.twitter.com/hm"><img src="réseaux/twitter.png" class="logoReseaux" alt=""></a>
+                    <a href="https://www.instagram.com/hm"><img src="réseaux/insta.png" class="logoReseaux" alt=""></a>
+                    <a href="http://www.youtube.com/user/hennesandmauritz"><img src="réseaux/ytb.png" class="logoReseaux" alt=""></a>
+                    <a href="https://www.pinterest.com/hm"><img src="réseaux/pinterest.png" class="logoReseaux" alt=""></a>
                 </div>
+                <span class="fontmini m-2">Le contenu de ce site est protégé par les droits d'auteur et demeure la propriété de H & M Hennes & Mauritz AB.</span>
+                <a href="https://www2.hm.com/fr_fr/index.html"><img src="projethm/img.png"  class="m-2 logohm"></a>
+                <div><span class="borderRight">France</span><span>€</span></div>
             </div>
         </div>
     </div>
